Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignBoolObjBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
        if v:GetValue() = true
            output "passed"
        end
    end

    action Test() returns Boolean
        Boolean var
        var:SetValue(true)
        return var
    end
end