Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanBoolObj.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        Boolean var
        var:SetValue(true)
        return var
    end
end